# poplar

./: .env.example  .gitignore  AGENTS.md  README.md  bst-demo.html  pyproject.toml  reasonix.toml
.superpowers/brainstorm/: msg-style-compare.html
docs/superpowers/plans/: 2026-06-13-poplar-phase1-mvp.md  2026-06-14-poplar-cache-plan.md  2026-06-14-poplar-context-plan.md  2026-06-21-architecture-optimization.md  2026-06-23-message-redesign-plan.md  2026-06-24-tool-inline-plan.md
docs/superpowers/specs/: 2026-06-13-poplar-design.md  2026-06-14-poplar-cache-context-design.md  2026-06-17-poplar-export-import.md  2026-06-17-poplar-multi-provider-design.md  2026-06-21-token-calculation-design.md  2026-06-23-poplar-message-redesign.md  2026-06-24-tool-inline-design.md
examples/: config.example.yaml  env.example
src/poplar/: __init__.py  config.py  i18n.py  main.py  utils.py
src/poplar/core/: agent_loop.py  context.py  session.py  stats.py  trust.py
src/poplar/persistence/: __init__.py  cache.py  store.py
src/poplar/providers/: __init__.py  anthropic.py  base.py  deepseek.py  ollama.py  openai.py  openai_compat.py
src/poplar/tools/: __init__.py  base.py  (+1 more)
tests/: test_agent_loop.py  test_anthropic.py  test_base_provider.py  test_cache.py  test_commands.py  test_config.py  test_context.py  test_deepseek_provider.py  test_i18n.py  test_main.py  test_merge_tool.py  test_ollama.py  test_openai_compat.py  test_providers.py  test_providers_init.py  test_session.py  test_stats.py  test_store.py  test_tools.py  test_trust.py  test_utils.py
tmp/: analyze.py  analyze2.py
(+8 files in other folders)
