[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poplar"
version = "0.2.0"
description = "AI Agent TUI application built with Textual"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
poplar = "poplar.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
